<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentsandactivities.AddOrEditCardActivity">

    <ImageView
        android:id="@+id/newCardImage"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/company_avatar"
        android:src="@drawable/ic_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createCardButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:text="@string/cancel"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/newCardImage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createCardButtonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/newCardImage"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLoadYourPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_photo"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/newCardImage"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_company_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoadYourPhoto"
        app:boxStrokeColor="@color/teal_700"
        app:hintTextColor="@color/teal_700">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/teal_700"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/card_number_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_company_name">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_card_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLoadYourPhoto"
            app:boxStrokeColor="@color/teal_700"
            app:hintTextColor="@color/teal_700">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/teal_700"
                android:textSize="16sp"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/scan_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:layout_margin="8dp"
            android:contentDescription="@string/scan_icon"
            android:src="@drawable/ic_qr_code_scanner"
            app:tint="@color/teal_700" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_number_ll"
        app:boxStrokeColor="@color/teal_700"
        app:hintTextColor="@color/teal_700">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/teal_700"
            android:textSize="16sp"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>