<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/white"
        android:text="@string/choose_code_format"
        android:background="@color/teal_700"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_formats"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="2dp"
        tool:listitem="@layout/barcodeformat_item"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        />

    <LinearLayout
        android:id="@+id/buttons_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/rv_formats">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:text="@string/cancel_button"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_button"
            android:backgroundTint="@color/light_salmon"
            android:layout_weight="1"
            android:layout_margin="2dp" />

    </LinearLayout>

    

</androidx.constraintlayout.widget.ConstraintLayout>